# fine_tune_LLM

./: .gitignore  README.md  chat.py  fine_tune.py  pyproject.toml  qwen_small.py  requirements.txt
dataset/: chuunibyo.xlsx  data.json
