[project]
name = "vllmqwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.10.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "bitsandbytes==0.47.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "datasets==4.0.0",
    "dill==0.3.8",
    "filelock==3.13.1",
    "frozenlist==1.7.0",
    "fsspec==2024.6.1",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "jinja2==3.1.4",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "networkx==3.3",
    "numpy==2.1.2",
    "openpyxl>=3.1.5",
    "packaging==25.0",
    "pandas==2.3.2",
    "peft==0.17.1",
    "pillow==11.0.0",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "pyarrow==21.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "setuptools==70.2.0",
    "six==1.17.0",
    "sympy==1.13.3",
    "tokenizers==0.22.0",
    "torch==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
    "tqdm==4.67.1",
    "transformers==4.56.0",
    "trl==0.22.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch-cu128"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu128"
explicit = true
